[package]
name = "gffkit"
version = "0.1.0"
edition = "2021"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.71.0"
homepage = "https://github.com/sharkLoc/gffkit"
description = "gffkit: A simple program for gff3 file manipulation"
keywords = ["gff", "gene","bio", "hts"]
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
bio = "1.3.1"
clap = { version = "4.3.21", features = ["derive"] }


[profile.release]
opt-level = 3
lto = true
