[package]
name = "gffkit"
version = "0.1.2"
edition = "2021"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.71.0"
homepage = "https://github.com/sharkLoc/gffkit"
description = "gffkit: A simple program for gff3 file manipulation"
keywords = ["gff", "gene","bio", "hts"]
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
bio = "1.6.0"
bzip2 = "0.4.4"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
env_logger = "0.10.0"
flate2 = "1.0.30"
human-sort = "0.2.2"
log = "0.4.21"
noodles = { version = "0.74.0", features = ["gff", "gtf"] }
noodles-gff = "0.18.0"
xz2 = "0.1.7"

[profile.release]
strip = true
